--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,17 @@
   "author": "James",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.8.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
